--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
   height: 100vh;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 main{
@@ -23,7 +23,6 @@ aside{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: auto;
 }
 
 /* Mix */
@@ -80,7 +79,11 @@ aside{
   margin: 10px 0px;
 }
 
-.central-nav,
+.central-nav{
+  margin-left: 24px;
+  overflow: auto;
+}
+
 .bottom-nav{
   margin-left: 15px;
 }
@@ -138,6 +141,10 @@ hr{
   font-size: 10px;
   padding: 10px 20px;
   border-radius: 15px;
+}
+
+.bottom-content{
+  overflow: auto;
 }
 
 .categories{
@@ -221,9 +228,7 @@ hr{
 }
 
 
-
 /* /Main Content */
-
 
 
 
