--- a/css/style.css
+++ b/css/style.css
@@ -174,15 +174,16 @@ hr{
 
 .container{
   margin-left: 10px;
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 .container:first-of-type{
-  margin-top: 0px;
+  margin-top: 20px;
 }
 
 .carousel{
   display: flex;
+  flex-wrap: wrap;
   margin-top: 15px;
 }
 
@@ -199,7 +200,7 @@ hr{
   margin-bottom: 10px;
 }
 
-.artist-play{
+.overlay{
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 0;
@@ -209,7 +210,7 @@ hr{
   display: none;
 }
 
-.artist-play .fa-play-circle{
+.overlay .fa-play-circle{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -218,7 +219,7 @@ hr{
   font-size: 50px;
 }
 
-.artist-box:hover .artist-play{
+.artist-box:hover .overlay{
   display: block;
   cursor: pointer;
 }
@@ -230,12 +231,16 @@ hr{
   margin-top: 5px;
 }
 
-.container .circle{
+.artist-img.circle{
   width: 150px;
   height: 150px;
   border-radius: 100%;
+  background-color: #141922;
 }
 
+.overlay.overlay-circle{
+  border-radius: 100%;
+}
 /* /Inner Content */
 /* /Main Content */
 
