--- a/css/style.css
+++ b/css/style.css
@@ -84,11 +84,15 @@ aside p:hover,
 /* Central Navbar */
 .central-nav{
   margin-left: 24px;
-  overflow: auto;
+  overflow: hidden;
   margin-top: 15px;
 }
 
-.central-nav .fa-plus{
+.playlist-plus{
+  padding-top: 10px;
+}
+
+.playlist-plus .fa-plus{
   font-size: 20px;
   color: #000;
   background-color: #D2D2D2;
@@ -96,7 +100,7 @@ aside p:hover,
   margin-right: 10px;
 }
 
-.central-nav .fa-plus:hover{
+.fa-plus:hover{
   background-color: #fff;
 }
 
@@ -104,6 +108,8 @@ aside p:hover,
   display: flex;
   flex-direction: column;
   margin-top: 10px;
+  height: calc(100% - 59px);
+  overflow-y: auto;
 }
 
 .column li{
@@ -221,12 +227,13 @@ hr{
 .artist-album{
   position: relative;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .artist-img{
   width: 150px;
   height: 150px;
-  margin-bottom: 10px;
+  display: block;
 }
 
 .overlay{
@@ -234,7 +241,7 @@ hr{
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 14px;
+  bottom: 0px;
   right: 0;
   display: none;
 }
@@ -325,7 +332,7 @@ footer{
   padding: 10px;
 }
 
-.fa-play-circle:hover{
+footer .fa-play-circle:hover{
   transform: scale(1.3);
 }
 
@@ -361,3 +368,10 @@ footer{
 }
 
 /* /Footer */
+
+
+@media screen and (max-width: 589px){
+  .logo .logo-txt{
+
+  }
+}
