--- a/css/style.css
+++ b/css/style.css
@@ -215,24 +215,24 @@ hr{
 
 .carousel{
   display: flex;
-  flex-wrap: wrap;
   margin-top: 15px;
 }
 
 .artist-box{
+  width: 150px;
   text-align: center;
   margin-right: 15px;
 }
 
 .artist-album{
+  width: 100%;
   position: relative;
   text-align: center;
   margin-bottom: 10px;
 }
 
 .artist-img{
-  width: 150px;
-  height: 150px;
+  width: 100%;
   display: block;
 }
 
