Footer bar animation added

--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,10 @@ hr{
   margin-bottom: 10px;
 }
 
+.circle-box.artist-box{
+  width: 150px;
+}
+
 .artist-img{
   width: 100%;
   display: block;
@@ -374,27 +378,50 @@ footer .fa-play-circle:hover{
   top: 0;
   left: 0;
   bottom: 0;
+  transition: width 1s;
+  transition-timing-function: linear;
 }
 
-.play-bar:hover .bar::after{
+.play-bar:hover .bar::after,
+.volume:hover .bar::after{
   background-color: #ADFF2F;
+  width: 100%;
 }
 
-.play-bar .fa-circle{
+.play-bar .fa-circle,
+.volume .fa-circle{
   color: #fff;
   font-size: 18px;
   position: absolute;
   top: 0;
-  left: 30px;
-  transform: translateY(-50%);
+  left: 23%;
+  transform: translateY(-43%);
   display: none;
   z-index: 10;
 }
 
-.play-bar:hover .fa-circle{
+.play-bar:hover .fa-circle,
+.volume:hover .fa-circle{
   display: block;
 }
 
+.play-bar .fa-circle,
+.volume .fa-circle{
+  animation-name: moving-circle;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes moving-circle {
+  0%{
+    top: 0px;
+    left: 23%;
+  }
+  100%{
+    top: 0px;
+    left: 85%;
+  }
+}
 
 .footer-right{
  display: flex;
